# Ast3roiDs

./: .gitmodules  CMakeLists.txt  Colisiones.cpp  Colisiones.hpp  ControladorSonido.cpp  ControladorSonido.hpp  Estados.hpp  README.md  constantesGlobales.hpp  main.cpp  mainPruebas3D.cpp  matematicas.hpp
Graficos/: Asteroide.cpp  Asteroide.hpp  Circular.cpp  Circular.hpp  Disparo.cpp  Disparo.hpp  Grafico.cpp  Grafico.hpp  Movil.cpp  Movil.hpp  Nave.cpp  Nave.hpp  Ovni.cpp  Ovni.hpp  OvniInteligente.cpp  OvniInteligente.hpp  Triangular.cpp  Triangular.hpp
Graficos3D/: Asteroide3D.cpp  Asteroide3D.hpp  Disparo3D.cpp  Disparo3D.hpp  Elemento3D.cpp  Elemento3D.hpp  Esfera.cpp  Esfera.hpp  Fuego.cpp  Fuego.h  Fuego.hpp  Malla.cpp  Malla.hpp  Minimapa.cpp  Minimapa.hpp  Nave3D.cpp  Nave3D.hpp  Ovni3D.cpp  Ovni3D.hpp  OvniInteligente3D.cpp  OvniInteligente3D.hpp  Ventana3D.cpp  Ventana3D.hpp
Recursos/IA/: disparo.nnet  disparo3D.nnet
Recursos/Modelos/: esfera2.mtl  nave.mtl  ovni.mtl
Recursos/Shaders/: shaderBasico.frag  shaderBrillante.frag  shaderBrillante.vert  shaderCilindrico.vert
Util3D/: Camara.hpp  ControladorModelos.cpp  ControladorModelos.hpp  ControladorShaders.cpp  ControladorShaders.hpp  ControladorTexturas.cpp  ControladorTexturas.hpp  Posicionamiento.hpp  Shader.cpp  Shader.hpp  Textura.cpp  Textura.hpp  Transformacion.hpp  Ventana3D.cpp  Ventana3D.hpp
Utiles/: CMakeLists.txt  Elman.cpp  ElmanGenetico.cpp  EntrenarRed.cpp  EntrenarRed.hpp  entrenarDisparos.cpp  entrenarDisparos3D.cpp  geneticos.cpp
neural/include/neural/: Layer.h  Network.h  Neuron.h
neural/src/: Layer.cpp  Network.cpp  Neuron.cpp
